Fix padding for mobile version to align with the hamburger menu

--- a/src/scss/layout/nav.scss
+++ b/src/scss/layout/nav.scss
@@ -45,7 +45,7 @@ $navbar-height: 3.75rem;
 
     .navbar-item, .navbar-link {
         padding: 0 !important;
-        padding-top: 0.5rem !important;
+        padding-top: 0.05rem !important;
         z-index: 5;
     }
 }
